# jMath

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt~
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  mainpage.md
include/jMath/: Allocator.h  DataTypes.h  Vector.h  jMath.h
src/: CMakeLists.txt  Vector.cpp  jMath.cpp
tests/: CMakeLists.txt  testlib.cpp
